# ursus-micro-edr

./: LICENSE  README.md  config.yml  pyproject.toml
docs/: architecture.html  disclaimer.html  index.html  operations.html  quickstart.html
docs/assets/: style.css
docs/detector/: pipeline.html  responses.html  rules.html
docs/sensors/: auth.html  file.html  mechanisms.html  network.html  process.html
rules/: R001_shell_from_web.yml  R002_pty_spawn_shell.yml  R003_netcat_shell.yml  R004_exec_from_tmp.yml  R005_sensitive_file_modify.yml  R006_ssh_key_modification.yml  R007_tmp_suspicious_binary.yml  R008_suspicious_outbound_connection.yml  R009_ssh_root_login.yml  R010_sudo_malicious_command.yml
scripts/: install.sh  start.sh  stop.sh  uninstall.sh
src/: __init__.py
src/common/: signals.py
src/detector/: rule_loader.py
src/sensor/: file_collector.py  journal_auth_collector.py  main.py  network_collector.py
src/ui/: main.py
src/ui/routes/: alerts.py  events.py  settings.py
src/ui/templates/: dashboard.html  process_tree.html
src/ursus/common/: config.py  db.py  logging.py
src/ursus/detector/: engine.py  main.py  operators.py  responses.py
src/ursus/sensor/: process_collector_netlink.py
src/ursus/ui/routes/: dashboard.py  process_tree.py
src/ursus/ui/templates/: _tree_node.html  alert_detail.html  alerts.html  base.html  events.html  settings.html
systemd/: ursus-detector.service  ursus-sensor.service  ursus-ui.service
